Fix header layout on mobile

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ header p {
 
 @media (max-width: 600px) {
     header img {
-        height: 45px;
+        height: 54px;
     }
 }
 /* Fine header */
